// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PasswordCreationForm snapshot tests should match the snapshot at password not match error 1`] = `
[
  <div
    className="login-modal-input-container"
  >
    <p
      className="login-modal-input-help"
    >
      enterPassword
    </p>
    <div
      className="login-modal-input-box-container login-modal-wrong-input-border"
    >
      <input
        className="login-modal-input-text"
        data-testid="userPassword"
        onChange={[Function]}
        type="password"
      />
    </div>
    <p
      className="login-modal-input-help"
    >
      repeatPassword
    </p>
    <div
      className="login-modal-input-box-container login-modal-wrong-input-border"
    >
      <input
        className="login-modal-input-text"
        data-testid="userPasswordRepeat"
        onChange={[Function]}
        type="password"
      />
    </div>
    <p
      className="login-modal-input-help login-modal-wrong-input"
    >
      renderMeToo
    </p>
  </div>,
  <div
    className="login-modal-button-container"
  >
    <button
      className="login-modal-button-black-on-green"
      onClick={[Function]}
    >
      next
    </button>
  </div>,
]
`;

exports[`PasswordCreationForm snapshot tests should match the snapshot without error 1`] = `
[
  <div
    className="login-modal-input-container"
  >
    <p
      className="login-modal-input-help"
    >
      enterPassword
    </p>
    <div
      className="login-modal-input-box-container"
    >
      <input
        className="login-modal-input-text"
        data-testid="userPassword"
        onChange={[Function]}
        type="password"
        value="one2three"
      />
    </div>
    <p
      className="login-modal-input-help"
    >
      repeatPassword
    </p>
    <div
      className="login-modal-input-box-container"
    >
      <input
        className="login-modal-input-text"
        data-testid="userPasswordRepeat"
        onChange={[Function]}
        type="password"
        value="one2three"
      />
    </div>
  </div>,
  <div
    className="login-modal-button-container"
  >
    <button
      className="login-modal-button-black-on-green"
      onClick={[Function]}
    >
      next
    </button>
  </div>,
]
`;
